# dev-environment

./: .gitignore  .gitmodules  README.md  devenv.nix  devenv.yaml  package-lock.json  package.json  pyproject.toml  repo-index.py  secretspec.toml
