[project]
name = "dev-environment"
version = "0.1.0"
description = "helper pyproject.toml to manage a shared python dev dependencies"
readme = "README.md"
requires-python = ">=3.12"

# only include dev packages because all other dependencies will be installed by:
# `devenv tasks run setup`
dependencies = [
    # data-commons-search
    "pytest >=8.4.2",
    "pytest-asyncio >=1.2.0",
    "pytest-cov >=7.0.0",
    "mypy >=1.18.0",
    "pre-commit >=4.3.0",
    "mcp[cli]",
    # metadata-warehouse
    # "pytest", # dsc is more specific 
    "types-xmltodict",
    "celery-stubs",
    "mypy",
    "types-jsonschema",
    "types-requests",
    "lxml-stubs"
]

