[project]
name = "dev-environment"
version = "0.1.0"
description = "helper pyproject.toml to manage a shared python dev dependencies"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "data-commons-search[agent,dev,gpu]",
    "metadata-warehouse-transformer[dev]",
]

[dependency-groups]

[tool.uv.workspace]
members = [
    "data-commons-search",
    "metadata-warehouse",
]

[tool.uv.sources]
data-commons-search = { workspace = true, editable = true }
metadata-warehouse-transformer = { workspace = true, editable = true }

